clap_derive/tests/ui/external_subcommand_wrong_type.stderr
error: The type must be either `Vec<String>` or `Vec<OsString>` to be used with `external_subcommand`.
 --> $DIR/external_subcommand_wrong_type.rs:7:11
  |
7 |     Other(Vec<CString>),
  |           ^^^

error: The type must be either `Vec<String>` or `Vec<OsString>` to be used with `external_subcommand`.
  --> $DIR/external_subcommand_wrong_type.rs:13:11
   |
13 |     Other(String),
   |           ^^^^^^

error: The enum variant marked with `external_attribute` must be a single-typed tuple, and the type must be either `Vec<String>` or `Vec<OsString>`.
  --> $DIR/external_subcommand_wrong_type.rs:18:5
   |
18 | /     #[clap(external_subcommand)]
19 | |     Other { a: String },
   | |_______________________^
